@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./develop/assets/css/style.css">
     <title>Horiseon: Digital Solution Services</title>
 </head>
 
@@ -27,21 +27,21 @@
     <section class="hero"></section><!--open and close hero section: bgimage-->
     <main class="content"><!--Opened main content-->
         <article id="search-engine-optimization"><!-- SEO article-->
-            <img src="./assets/images/search-engine-optimization.jpg" alt="SEO notes on a desk" class="float-left" />
+            <img src="./develop/assets/images/search-engine-optimization.jpg" alt="SEO notes on a desk" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </article><!--close SEO article-->
         <article id="online-reputation-management"><!--reputation mgmt article-->
-            <img src="./assets/images/online-reputation-management.jpg" alt="Reputation graph on laptop display" class="float-right" />
+            <img src="./develop/assets/images/online-reputation-management.jpg" alt="Reputation graph on laptop display" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </article>
         <article id="social-media-marketing"><!--social media article-->
-            <img src="./assets/images/social-media-marketing.jpg" alt="Social media icons and graphics arranged on a desk" class="float-left" />
+            <img src="./develop/assets/images/social-media-marketing.jpg" alt="Social media icons and graphics arranged on a desk" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -51,21 +51,21 @@
     <aside class="benefits"><!--sidebar-->
         <div>
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./develop/assets/images/lead-generation.png" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
         <div>
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./develop/assets/images/brand-awareness.png" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
         <div>
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
+            <img src="./develop/assets/images/cost-management.png"></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
